# python-rsrcfork

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  rsrcfork.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
rsrcfork/: __init__.py  __main__.py  _io_utils.py  api.py  compress.py
rsrcfork/compress/: __init__.py  common.py  dcmp0.py  dcmp1.py  dcmp2.py
src/rsrcfork/: __init__.py  __main__.py  api.py
src/rsrcfork/compress/: __init__.py  common.py  dcmp0.py  dcmp1.py  dcmp2.py
tests/: test_rsrcfork.py
tests/data/: testfile.rsrc  unicode.textClipping.rsrc
tests/data/compress/compressed/: Finder Help.rsrc  Finder.rsrc  Install.rsrc  System.rsrc
tests/data/compress/uncompressed/: Finder Help.rsrc  Finder.rsrc  Install.rsrc  System.rsrc
