[metadata]
name = rsrcfork
# The version is defined in setup.py,
# which extracts the value of the __version__ attribute from rsrcfork/__init__.py,
# so that the version number/string is only explicitly written in a single place.
# We cannot use "version = attr: rsrcfork.__version__" here,
# because the attr directive needs to import the module to read its attributes,
# which won't work if any of the module's import-time dependencies are not installed yet
# (as is usually the case when setup.cfg is first evaluated before installation).
url = https://github.com/dgelessus/python-rsrcfork
author = dgelessus
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Topic :: Software Development :: Disassemblers
	Topic :: System
	Topic :: Utilities
	License :: OSI Approved :: MIT License
	Operating System :: MacOS :: MacOS 9
	Operating System :: MacOS :: MacOS X
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
license = MIT
license_file = LICENSE
description = A pure Python, cross-platform library/tool for reading Macintosh resource data, as stored in resource forks and ``.rsrc`` files
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	rsrc
	fork
	resource
	manager
	macintosh
	mac
	macos

[options]
setup_requires =
	setuptools>=39.2.0
python_requires = >=3.6
packages = find:

[options.packages.find]
include =
	rsrcfork
	rsrcfork.*

[options.entry_points]
console_scripts =
	rsrcfork = rsrcfork.__main__:main

[flake8]
exclude =
	.mypy_cache/,
	build/,
	dist/,
	# The following entries would also be added by default by flake8 when not specifying a custom exclude list.
	# TODO Once flake8 3.8.0 is released, change the name of this configuration setting from exclude to extend-exclude and remove the entries below.
	.git/,
	.tox/,
	__pycache__/,

# The following issues are ignored because they do not match our code style:
ignore =
	E226, # missing whitespace around arithmetic operator
	E261, # at least two spaces before inline comment
	E501, # line too long
	W293, # blank line contains whitespace
	W503, # line break before binary operator

# flake8-tabs configuration
use-flake8-tabs = true
blank-lines-indent = always
indent-tabs-def = 1

[mypy]
files=rsrcfork/**/*.py
python_version = 3.6

disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_untyped_decorators = True

no_implicit_optional = True

warn_unused_ignores = True
warn_unreachable = True

warn_redundant_casts = True
