[metadata]
name = rsrcfork
version = attr: rsrcfork.__version__
url = https://github.com/dgelessus/python-rsrcfork
author = dgelessus
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: MacOS :: MacOS 9
	Operating System :: MacOS :: MacOS X
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Software Development :: Disassemblers
	Topic :: System
	Topic :: Utilities
	Typing :: Typed
license = MIT
license_files =
	LICENSE
description = A pure Python, cross-platform library/tool for reading Macintosh resource data, as stored in resource forks and .rsrc files
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
	rsrc
	fork
	resource
	manager
	macintosh
	mac
	macos

[options]
# mypy can only find type hints in the package if zip_safe is set to False,
# see https://mypy.readthedocs.io/en/latest/installed_packages.html#making-pep-561-compatible-packages
zip_safe = False
python_requires = >=3.6
packages = find:
package_dir =
	= src

[options.package_data]
rsrcfork =
	py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	rsrcfork = rsrcfork.__main__:main

[flake8]
extend-exclude =
	.mypy_cache/,
	build/,
	dist/,

# The following issues are ignored because they do not match our code style:
ignore =
	# These E1 checks report many false positives for code that is (consistently) indented with tabs alone.
	# indentation contains mixed spaces and tabs
	E101,
	# over-indented
	E117,
	# continuation line over-indented for hanging indent
	E126,
	# missing whitespace around arithmetic operator
	E226,
	# at least two spaces before inline comment
	E261,
	# line too long
	E501,
	# indentation contains tabs
	W191,
	# blank line contains whitespace
	W293,
	# line break before binary operator
	W503,

[mypy]
files=src/**/*.py
python_version = 3.6

disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_untyped_decorators = True

no_implicit_optional = True

warn_unused_ignores = True
warn_unreachable = True

warn_redundant_casts = True
